# api.groupify

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  fly.toml
migrations/: 20240301021239_users.up.sql  20240301021240_links.down.sql  20240301021240_links.up.sql  20240305005204_link_statistics.down.sql  20240305005204_link_statistics.up.sql  20240305012444_settings.down.sql  20240305012444_settings.up.sql  20240306014151_groups.down.sql  20240306014151_groups.up.sql  20240306014156_channels.down.sql  20240306014156_channels.up.sql  20240515010310_fix_channel_id.down.sql  20240515010310_fix_channel_id.up.sql  20240517023727_youtube_channels.down.sql  20240517023727_youtube_channels.up.sql  20240721184543_crunchyroll_channels.down.sql  20240721184543_crunchyroll_channels.up.sql  20241006225536_sessions.down.sql  20241006225536_sessions.up.sql  20241024001914_survey.down.sql  20241024001914_survey.up.sql  20241201000000_oauth_providers.down.sql  20241201000000_oauth_providers.up.sql  20251005000000_add_fields_to_groups.down.sql  20251005000000_add_fields_to_groups.up.sql  20251206214458_share_links.down.sql  20251206214458_share_links.up.sql  20251206220040_group_members.down.sql  20251206220040_group_members.up.sql  20251221173742_subscription_plans.down.sql  20251221173742_subscription_plans.up.sql  20251221174634_subscription_plans_users.down.sql  20251221174634_subscription_plans_users.up.sql  20260131240000_create_videos_table.down.sql  20260131240000_create_videos_table.up.sql  20260416000000_add_enable_groupshelf_to_groups.up.sql
src/: auth.rs  db.rs  email.rs  errors.rs  main.rs  utils.rs
src/api/: mod.rs
src/api/common/: body_logger.rs  cache.rs  limits.rs  middleware.rs  mod.rs  tracing.rs  utils.rs
src/api/v1/: auth.rs  channel.rs  discord_auth.rs  group.rs  link_shortner.rs  login.rs  mod.rs  oauth.rs  routes.rs  subscription_confirm.rs  subscriptions.rs  user.rs  youtube.rs
src/api/v2/: animes.rs  channels.rs  dashboard.rs  groups.rs  mod.rs  share.rs
src/api/v3/: animes.rs  blog.rs  channels.rs  groups.rs  mod.rs  payments.rs  proxy.rs  sales.rs  share_links.rs  users.rs  websites.rs
src/api/v3/entities/: channels.rs  crunchyroll_channels.rs  group_members.rs  groups.rs  link_statistics.rs  links.rs  mod.rs  prelude.rs  sessions.rs  settings.rs  share_links.rs  subscription_plans.rs  subscription_plans_users.rs  survey.rs  users.rs  videos.rs  youtube_channels.rs
src/api/v3/services/: mod.rs  youtube_video_sync.rs
src/authentication/: mod.rs  password.rs
src/routes/: channel.rs  debug.rs  group.rs  health_check.rs  link_shortner.rs  login.rs  mod.rs  subscription_confirm.rs  subscriptions.rs  survey.rs  user.rs  youtube.rs
src/system/: debug.rs  health_check.rs  mod.rs
