[package]
name = "api-groupify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.7.4", features = ["macros"] }
axum-prometheus = "0.6.1"
base64 = "0.21.7"
chrono = { version = "0.4.37", features = ["serde"] }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.13.1"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "rustls-tls",
] }
secrecy = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "sqlite",
  "chrono",
] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.6.6", features = ["trace", "cors", "request-id"] }
tonic = { version = "0.13.1", features = ["tls-native-roots", "gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-appender = "0.2.3"
axum-otel = "0.30.10"
opentelemetry-resource-detectors = "0.9"
opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "gzip-tonic", "tls-roots", "trace"] }
sentry = { version = "0.42.0", features = ["opentelemetry", "logs", "tracing", "tower-axum-matched-path"] }
tracing-otel-extra = { version = "0.30",  features = ["env", "logger", "otel", "http"] }
tracing-opentelemetry-extra = { version = "0.30.10", features = ["subscriber"] }
opentelemetry-semantic-conventions = { version="0.29.0" }
tracing-opentelemetry = { version = "0.31.0" }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
hex = "0.4.3"
jsonwebtoken = "9.3.0"
hyper = "1.2.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.57"
tower-sessions = "0.12.2"
time = "0.3.36"
axum_typed_multipart = "0.11.1"
tower-cookies = "0.10.0"
cookie = "0.18.1"
futures = "0.3.30"
async-std = "1.12.0"
bytes = "1.6.0"
oauth2 = "4.4.2"
dotenvy = "0.15.7"
sentry-tower = { version = "0.42.0", features = ["axum", "http"]}
