[package]
name = "api-groupify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.7", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
metrics = "0.24.3"
once_cell = "1.21.3"
rand = "0.8.5"
reqwest = { version = "0.12.25", default-features = false, features = [
  "json",
  "rustls-tls",
] }
secrecy = "0.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.145"
sha3 = "0.10.8"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "sqlite",
  "chrono",
  "bigdecimal"
] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "request-id"] }
tonic = { version = "0.14.2", features = ["tls-native-roots", "gzip"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
hex = "0.4.3"
jsonwebtoken = "9.3.0"
hyper = "1.8.1"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
tower-sessions = "0.14.0"
time = "0.3.44"
axum_typed_multipart = "0.16.4"
tower-cookies = "0.11.0"
cookie = "0.18.1"
futures = "0.3.31"
async-std = "1.13.2"
bytes = "1.11.0"
oauth2 = "4.4.2"
dotenvy = "0.15.7"

axum-otel = "0.31.0"
axum-otel-metrics = "0.12.0"
tracing-otel-extra = { version = "0.31.0", features = ["otel", "logger"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "grpc-tonic", "logs"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
rust_decimal = "1.39.0"
deadpool-redis = "0.22.0"
redis = { version = "1.0.1" }
rustls = "0.23.35"
http-body-util = "0.1.3"
diesel = { version = "2.3.5", features = ["postgres"] }
